# minigui

./: .cproject  .gitignore  .project  AUTHORS  ChangeLog  LICENSE.POLICY  LICENSE.POLICY.zh  Makefile.am  Makefile.in  NEWS  README  Version  config.sub  configure  configure-tomtom.sh  configure-ubuntu.sh  configure.in  mgconfig.h  mgconfig.h.in
etc/: Makefile.am  Makefile.in  MiniGUI-classic.cfg  MiniGUI-fashion.cfg  MiniGUI-flat.cfg  MiniGUI-min.cfg  MiniGUI-tomtom.cfg
ext/: AUTHORS  Makefile.am  Makefile.in  README  template.c  template.h
ext/control/: Makefile.am  Makefile.in  animation.c  animation_impl.h  coolbar.c  coolbar_impl.h  gif89a.c  gridview.c  gridview_impl.h  gridviewcelltype.c  iconview.c  iconview_impl.h  initmgext.c  listview.c  listview_impl.h  monthcalendar.c  monthcalendar_impl.h  spinbox.c  spinbox_impl.h  treeview.c  treeview_impl.h
ext/include/: Makefile.am  Makefile.in  makefile.msvc  makefile.ng
ext/include/ext/: Makefile.am  Makefile.in  listview.h  makefile.msvc  makefile.ng
ext/mywins/: Makefile.am  Makefile.in  colordlg.c  colorspace.c  filedlg.c  helpwin.c  mywindows.c  newfiledlg.c
ext/res/: Makefile.am  Makefile.in
ext/skin/: Makefile.am  Makefile.in  bmplabel.c  bmplabel.h  chkbutton.c  chkbutton.h  cmdbutton.c  cmdbutton.h  item_comm.h  label.c  label.h  mgcontrol.c  mgcontrol.h  rotslider.c  rotslider.h  skin.c  slider.c  slider.h
include/: Makefile.am  Makefile.in  makefile.msvc  makefile.ng  window.h
include/ctrl/: Makefile.am  Makefile.in  ctrlhelper.h  makefile.ng
m4/: Makefile.in
src/: Makefile.am  Makefile.in
src/control/: Makefile.am  Makefile.in  button.c  combobox.c  ctrlmisc.c  edit.c  listbox.c  listmodel.c  menubutton.c  newtoolbar.c  progressbar.c  propsheet.c  scrolled.c  scrollview.c  scrollwnd.c  simedit.c  static.c  textedit.c  toolbar.c  trackbar.c
src/font/: Makefile.am  Makefile.in  big5unimap.c  charset.c  charset.h  devfont.c  fontname.c  gbunimap.c  logfont.c  mapunitobig5.c  mapunitogb.c  qpf.c  qpf.h  rawbitmap.c  rawbitmap.h  sysfont.c  textops.c  varbitmap.c  varbitmap.h
src/font/in-core/: 6x12-iso8859-1.c  8x16-iso8859-1.c  Makefile.am  Makefile.in  courier_8x13.c  fixedsys_8x15.c  ming-12-big5.c  ming-16-big5.c  qpf-helvetica-10.c  qpf-micro-4.c  qpf-times-10.c  sansserif_11x13.c  song-12-gb2312.c  song-16-gb2312.c  symb12.c  system_14x16.c  terminal_8x12.c  vbf_helvR16.c  vbf_helvR21.c  vbf_helvR27.c  vgarom_8x8.c
src/gui/: Makefile.am  Makefile.in  accelkey.c  caret.c  ctrlclass.c  de-kmap.c  de-latin1-kmap.c  dialog.c  element.c  es-cp850-kmap.c  es-kmap.c  fr-kmap.c  fr-pc-kmap.c  it-kmap.c  keyboard.c  keyboard.h  menu.c  window.c
src/ial/: Makefile.am  Makefile.in  auto.c  comminput.c  custom.c  custom.h  dummy.c  ial.c  ial_tomtom_ts.c  ial_tomtom_ts.h  qvfb.c  random.c
src/ial/native/: Makefile.am  Makefile.in  kbd_tty.c  mou_gpm.c  mou_imps2.c  mou_ms.c  mou_ms3.c  mou_ps2.c  native.c  native.h  vtswitch-lite.c
src/include/: Makefile.am  Makefile.in  accelkey.h  bitmap.h  blockheap.h  clipboard.h  cursor.h  dc.h  devfont.h  element.h  event.h  fontname.h  gal.h  ial.h  icon.h  menu.h  msgstr.h  newgal.h  ourhdr.h  readbmp.h  sysfont.h  sysres.h  timer.h
src/include/control/: Makefile.am  Makefile.in  button_impl.h  combobox_impl.h  ctrlmisc.h  edit_impl.h  listbox_impl.h  listmodel.h  medit_impl.h  menubutton_impl.h  newtoolbar_impl.h  progressbar_impl.h  propsheet_impl.h  scrollwnd.h  simedit_impl.h  static_impl.h  text.h  textedit_impl.h  toolbar_impl.h  trackbar_impl.h
src/kernel/: Makefile.am  Makefile.in  blockheap.c  cursor.c  desktop-comm.c  desktop-ths.c  event.c  fixstr.c  init.c  message.c  slotset.c  timer.c
src/main/: Makefile.am  Makefile.in  main.c
src/misc/: Makefile.am  Makefile.in  about.c  clipboard.c  endianrw.c  error.c  listenfd.c  math.c  misc.c  nposix.c  rwops.c  sockio.c  systext.c
src/mybmp/: Makefile.am  Makefile.in  gif.c  jpeg.c  lbm.c  mybmp.c  pcx.c  png.c  tga.c  winbmp.c
src/newgal/: Makefile.am  Makefile.in  blit.c  blit.h  blit_A.c  blit_N.c  gamma.c  newgal.c  pixels.c  pixels_c.h  surface.c  sysvideo.h  video.c
src/newgal/commlcd/: Makefile.am  Makefile.in  axlinux_c33l05.c  commlcd.c  ecos_generic.c  extern.c
src/newgal/dummy/: Makefile.am  Makefile.in  nullvideo.c
src/newgal/fbcon/: Makefile.am  Makefile.in  fb3dfx.c  fbmatrox.c  fbneomagic.c  fbvideo.c  fbvideo.h
src/newgal/qvfb/: Makefile.am  Makefile.in  qvfb.c  qvfb.h
src/newgal/shadow/: Makefile.am  Makefile.in  ecos_generic.c  linux_fbcon.c  linux_qvfb.c  nucleus_monaco.c  shadow.c  shadow.h  threadx_anvil.c  unknown.c  win_fb.c  win_wvfb.c
src/newgdi/: Makefile.am  Makefile.in  advapi.c  arc.c  attr.c  bitmap.c  clip.c  coor.c  drawtext.c  drawtext.h  flood.c  gdi.c  icon.c  line.c  map.c  miarc.c  midash.c  mifillarc.c  mifpolycon.c  mispans.c  miwideline.c  palette.c  pixel.c  pixel_ops.c  pixel_ops.h  polygon.c  polygon.h  readbmp.c  region.c  rotatebmp.c  screen.c  text.c
src/sysres/: Makefile.am  Makefile.in  bmps-3d.c  bmps-flat.c  bmps-phone.c  button-3d-bmp.c  button-flat-bmp.c  button-phone-bmp.c  checkmark-3d-bmp.c  checkmark-flat-bmp.c  cursors.c  downarrow-3d-bmp.c  downarrow-flat-bmp.c  downarrow-phone-bmp.c  filetype-icons-flat.c  filetype-icons.c  fold-ico-flat.c  fold-ico.c  icons-3d.c  icons-flat.c  leftrightarrow-3d-bmp.c  leftrightarrow-flat-bmp.c  leftrightarrow-phone-bmp.c  lvfold-bmp.c  lvunfold-bmp.c  mgetc-axlinux.c  mgetc-bf533.c  mgetc-bfin.c  mgetc-custom.c  mgetc-cygwin.c  mgetc-dm270.c  mgetc-ecos-default.c  mgetc-ecos-ipaq-wifi.c  mgetc-ecos-palm2.c  mgetc-em85.c  mgetc-em85xx.c  mgetc-em86.c  mgetc-embest2410.c  mgetc-fft7202.c  mgetc-figueroa.c  (+38 more)
vcongui/: Makefile.am  Makefile.in  child.c  child.h  defs.h  error.c  error.h  foo.c  key.c  key.h  paint.c  paint.h  resource.h  terminal.c  terminal.h  vc.c  vc.h  vcongui.c  vt.c  vt.h
