SUBDIRS = ext

# The input Makefile for MiniGUIExtension header files

# The directory where the include files will be installed
libmgextincludedir = $(includedir)/minigui

# Which header files to install
COMM_HDRS = mgext.h mywindows.h filedlg.h skin.h newfiledlg.h colordlg.h colorspace.h
libmgextinclude_HEADERS = $(COMM_HDRS)

EXTRA_DIST=makefile.ng makefile.msvc

TOP_DIR=../..
