
# The directory where the data files will be installed
#mgextdatadir = $(libdir)/minigui/res/icon

# Which data files to install
#mgextdata_DATA = fold.ico unfold.ico folder.ico textfile.ico

#install-data-local:
#	$(INSTALL_DATA) fold.ico /usr/local/lib/minigui/res/icon
#	$(INSTALL_DATA) unfold.ico /usr/local/lib/minigui/res/icon

EXTRA_DIST = fold.ico unfold.ico folder.ico textfile.ico

