libminiguiincludedir = $(includedir)/minigui/ctrl

libminiguiinclude_HEADERS= \
	ctrlhelper.h \
	static.h \
	button.h \
	edit.h \
	combobox.h \
	progressbar.h \
	menubutton.h \
	toolbar.h \
	newtoolbar.h \
	propsheet.h \
	listbox.h \
	scrollview.h \
	trackbar.h \
	scrollbar.h \
	textedit.h

EXTRA_DIST=makefile.ng makefile.msvc

TOP_DIR=../..
