INCLUDES = -I../../include -I../include -I../include/control

noinst_LTLIBRARIES = libcontrol.la

SRC_FILES = ctrlmisc.c \
              static.c button.c simedit.c edit.c listbox.c progressbar.c \
              toolbar.c menubutton.c trackbar.c combobox.c propsheet.c \
              newtoolbar.c scrolled.c scrollwnd.c scrollview.c textedit.c listmodel.c

libcontrol_la_SOURCES = $(SRC_FILES) 

LIB_NAME=libcontrol

TOP_DIR=../..
