INCLUDES = -I../../include -I../include

noinst_LTLIBRARIES = libsysres.la

EXTRA_DIST = \
    button-3d-bmp.c  downarrow-3d-bmp.c updownarrow-3d-bmp.c leftrightarrow-3d-bmp.c \
    button-flat-bmp.c downarrow-flat-bmp.c updownarrow-flat-bmp.c leftrightarrow-flat-bmp.c \
    button-phone-bmp.c downarrow-phone-bmp.c updownarrow-phone-bmp.c leftrightarrow-phone-bmp.c \
    bmps-3d.c bmps-flat.c bmps-phone.c \
    spinbox-3d-bmp.c spinbox-flat-bmp.c spinbox-phone-bmp.c \
    checkmark-3d-bmp.c checkmark-flat-bmp.c \
    trackbar-phone-bmp.c \
    cursors.c icons-flat.c icons-3d.c fold-ico-flat.c unfold-ico-flat.c \
	fold-ico.c unfold-ico.c lvfold-bmp.c lvunfold-bmp.c filetype-icons.c \
    filetype-icons-flat.c my_caption.c my_capbtns.c \
    mgetc-custom.c \
    mgetc-vxppc.c mgetc-vxwifi.c mgetc-vxi386.c mgetc-vxsim.c \
	mgetc-ucosii-arm3000.c mgetc-ucosii-skyeye.c \
    mgetc-ecos-default.c mgetc-ecos-ipaq-wifi.c mgetc-ecos-palm2.c \
	mgetc-swlinux.c \
    mgetc-cygwin.c \
    mgetc-win32.c \
    mgetc-threadx.c \
    mgetc-nucleus.c mgetc-nucleus-mnt.c mgetc-nucleus-monaco.c \
    mgetc-psos-default.c \
    mgetc-ose-mx21.c \
	mgetc-axlinux.c mgetc-bfin.c mgetc-bf533.c mgetc-utpmc.c \
	mgetc-uptech.c mgetc-fft7202.c mgetc-em85xx.c mgetc-mb93493.c \
	mgetc-em86.c mgetc-em85.c mgetc-hh44b0.c \
    mgetc-figueroa.c mgetc-ipaq.c mgetc-dm270.c mgetc-xscale.c mgetc-rm9200.c \
	mgetc-embest2410.c mgetc-hh2410r3.c mgetc-hh2440.c \
	mgetc-pc.c

libsysres_la_SOURCES = syscfg.c resource.c mgetc.c 

SRC_FILES=$(libsysres_la_SOURCES)
LIB_NAME=libsysres
TOP_DIR=../..
