noinst_HEADERS =        \
        button_impl.h ctrlmisc.h simedit_impl.h edit_impl.h listbox_impl.h medit_impl.h \
        progressbar_impl.h static_impl.h toolbar_impl.h menubutton_impl.h trackbar_impl.h \
        combobox_impl.h propsheet_impl.h newtoolbar_impl.h scrolled.h \
        scrollwnd.h scrollview_impl.h textedit_impl.h text.h listmodel.h
