
## Makefile.am for MiniGUI using the framebuffer console video driver

INCLUDES=-I../../../include -I../../include -I../

noinst_LTLIBRARIES = libvideo_fbcon.la
libvideo_fbcon_la_SOURCES = $(FBCON_SRCS)

FBCON_SRCS =        \
    fbvideo.h       \
    fb3dfx.c        \
    fb3dfx.h        \
    fbmatrox.c      \
    fbmatrox.h      \
    fbvideo.c       \
    3dfx_mmio.h     \
    3dfx_regs.h     \
    matrox_mmio.h   \
    matrox_regs.h   \
    fbneomagic.c    \
    fbneomagic.h    \
    neomagic_mmio.h
